--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,6 +6,8 @@ $whiteGrey: #B9B9B9;
 $torqoise: #57A4A4;
 $white: #fff;
 $black: #000;
+$menuBG: #F5F5F5;
+$menuitemBG: #e5e5e5;
 
 /*BREAKPOINTS*/
 $screen-sm: 576px;
