--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -10,8 +10,8 @@ body {
 }
 
 .container {
-    max-width: 100%;
-    width: 1200px;
+    width: 100%;
+    max-width: 1170px;
     padding: 0 25px;
     margin: 0 auto;
 }
