--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -28,3 +28,9 @@
      justify-content: $justify;
      align-items: $align;
  }
+
+@mixin flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
