--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,7 @@ $white: #fff;
 $black: #000;
 $menuBG: #F5F5F5;
 $menuitemBG: #e5e5e5;
+$footerTitle: #fefefe;
 
 /*BREAKPOINTS*/
 $screen-sm: 576px;
