--- a/src/scss/_posts.scss
+++ b/src/scss/_posts.scss
@@ -71,7 +71,7 @@
     line-height: 30px;
     margin: 0;
     padding-top: 10px;
-    @include medium {
+    @include small {
       padding-top: 0;
       font-size: 16px;
     }
